@@ -19,4 +19,4 @@ dict_item::一个字典，建议是 `globals()`或 `locals()`
 
 ## clean()
 
-清空绑定的TinUI或BasicTinUI，同时会触发 `ui.clean_windows()`。
+回退到初始化，同时会触发 `ui.clean_windows()`。
