@@ -6,6 +6,10 @@
 ==========更新日志==========
 
 
+==========5.35==========
+2025-
+1. 将所有内置实体控件加入ui.windows，在TinUI销毁后进行销毁
+
 ==========5.34==========
 2025-7-6
 1. TinUIXml的clean将会完全回退到初始化
